--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=305
 dock_hsplit_3=-368
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Prefabs/Crystals/CrystalYellow.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Globals/GlobalSignals.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Globals/", "res://Scenes/", "res://Prefabs/", "res://Prefabs/Crystals/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/ShielaCards/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -32,11 +32,12 @@ current_scene="res://Scenes/GameScene.tscn"
 center_split_offset=-330
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://README.md"]
-selected_script=""
+open_scripts=["res://Scripts/GUIController.gd", "res://Scripts/PlayerMovement.gd", "res://README.md"]
+selected_script="res://Scripts/PlayerMovement.gd"
 open_help=["Area2D", "CollisionShape2D"]
 script_split_offset=70
 list_split_offset=0
