--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=0
+dock_split_2=-136
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=305
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Globals/GlobalSignals.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Globals/", "res://Scenes/", "res://Prefabs/", "res://Prefabs/Crystals/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/ShielaCards/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Scoreboard.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Menus/", "res://Assets/Sprites/", "res://Assets/Sprites/ShielaCards/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/GUI.tscn")
-current_scene="res://Scenes/GameScene.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/GUI.tscn", "res://Menus/PauseMenu.tscn", "res://Scenes/OptionsMenu.tscn", "res://Scenes/Scoreboard.tscn")
+current_scene="res://Scenes/MainMenu.tscn"
 center_split_offset=-330
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/GUIController.gd", "res://Scripts/PlayerMovement.gd", "res://README.md"]
-selected_script="res://Scripts/PlayerMovement.gd"
-open_help=["Area2D", "CollisionShape2D"]
+open_scripts=["res://Scripts/GUIController.gd"]
+selected_script="res://Scripts/GUIController.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 
