--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Scoreboard.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Menus/", "res://Assets/Sprites/", "res://Assets/Sprites/ShielaCards/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Assets/Sprites/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/GUI.tscn", "res://Menus/PauseMenu.tscn", "res://Scenes/OptionsMenu.tscn", "res://Scenes/Scoreboard.tscn")
+open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/GUI.tscn", "res://Menus/PauseMenu.tscn", "res://Scenes/OptionsMenu.tscn", "res://Scenes/Login.tscn")
 current_scene="res://Scenes/MainMenu.tscn"
-center_split_offset=-330
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/GUIController.gd"]
-selected_script="res://Scripts/GUIController.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
