--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,12 +4,12 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-136
+dock_split_2=-8
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=305
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Assets/Sprites/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Globals/SceneManager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Globals/", "res://Scenes/", "res://Menus/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/BasicShapes/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/GUI.tscn", "res://Menus/PauseMenu.tscn", "res://Scenes/OptionsMenu.tscn", "res://Scenes/Login.tscn")
-current_scene="res://Scenes/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameScene.tscn", "res://Prefabs/Crystals/CrystalRed.tscn", "res://Prefabs/Player.tscn")
+current_scene="res://Scenes/GameScene.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scripts/WinMenu.gd"]
+selected_script="res://Scripts/WinMenu.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
