--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -4,4 +4,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/CrystalController.gd"
+}, {
+"base": &"Area2D",
+"class": &"EndZone",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/EndZoneController.gd"
 }])
