--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,20 +19,20 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Globals/SceneManager.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Globals/", "res://Scenes/", "res://Menus/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/BasicShapes/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Levels/", "res://Assets/", "res://Assets/Sprites/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainMenu.tscn", "res://Scenes/GameScene.tscn", "res://Prefabs/Crystals/CrystalRed.tscn", "res://Prefabs/Player.tscn")
+open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Crystals/CrystalRed.tscn", "res://Prefabs/Player.tscn", "res://Scenes/Levels/Level0.tscn")
 current_scene="res://Scenes/GameScene.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
