Added hitbox to the sword

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,23 +12,23 @@ dock_floating={}
 dock_split_2=-8
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=305
-dock_hsplit_3=-368
+dock_hsplit_2=272
+dock_hsplit_3=-362
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Assets/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Levels/", "res://Assets/", "res://Assets/Sprites/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Globals/", "res://Scenes/", "res://Scenes/Levels/", "res://Assets/", "res://Assets/Sprites/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Crystals/CrystalRed.tscn", "res://Prefabs/Player.tscn", "res://Scenes/Levels/Level0.tscn")
-current_scene="res://Scenes/GameScene.tscn"
+open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn")
+current_scene="res://Prefabs/Player.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/WinMenu.gd"]
-selected_script="res://Scripts/WinMenu.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
