--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -48,8 +48,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 7.0,
+"row": 68,
+"scroll_position": 46.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -62,8 +62,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
-"scroll_position": 0.0,
+"row": 7,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -148,6 +148,34 @@ state={
 "h_scroll_position": 0,
 "row": 13,
 "scroll_position": 13.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/EndZoneController.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 4.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Hitbox.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
