--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Menus/WinMenu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Globals/", "res://Scenes/", "res://Resources/", "res://Menus/", "res://Assets/Sprites/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
+dock_filesystem_selected_paths=PackedStringArray("res://Audio/lightning_ability.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Globals/", "res://Audio/", "res://Assets/Sprites/", "res://Addons/silent_wolf/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/EndZone.tscn", "res://Menus/WinMenu.tscn", "res://Scenes/MainMenu.tscn", "res://Prefabs/GUI.tscn")
-current_scene="res://Scenes/GameScene.tscn"
+open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/EndZone.tscn", "res://Scenes/MainMenu.tscn", "res://Prefabs/GUI.tscn")
+current_scene="res://Scenes/MainMenu.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
