--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Audio/lightning_ability.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Globals/", "res://Audio/", "res://Assets/Sprites/", "res://Addons/silent_wolf/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/icon.svg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Globals/", "res://Assets/", "res://Assets/Sprites/", "res://Addons/silent_wolf/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
