--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/icon.svg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Globals/", "res://Assets/", "res://Assets/Sprites/", "res://Addons/silent_wolf/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/SpaceBackground/parallax-space-stars.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Globals/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/SpaceBackground/", "res://Addons/silent_wolf/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/EndZone.tscn", "res://Scenes/MainMenu.tscn", "res://Prefabs/GUI.tscn")
-current_scene="res://Scenes/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/EndZone.tscn", "res://Scenes/MainMenu.tscn", "res://Prefabs/GUI.tscn", "res://Scenes/OptionsMenu.tscn", "res://Prefabs/audio_player.tscn", "res://Prefabs/parallax_background.tscn")
+current_scene="res://Scenes/GameScene.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/MainMenu.gd"]
-selected_script="res://Scripts/MainMenu.gd"
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
