--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Sprites/SpaceBackground/parallax-space-stars.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Globals/", "res://Assets/", "res://Assets/Sprites/", "res://Assets/Sprites/SpaceBackground/", "res://Addons/silent_wolf/")
+dock_filesystem_selected_paths=PackedStringArray("res://Addons/silent_wolf/Scores/Leaderboard.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/Globals/", "res://Scenes/", "res://Assets/", "res://Assets/Sprites/SpaceBackground/", "res://Addons/", "res://Addons/silent_wolf/", "res://Addons/silent_wolf/Scores/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/GameScene.tscn", "res://Prefabs/Player.tscn", "res://Prefabs/EndZone.tscn", "res://Scenes/MainMenu.tscn", "res://Prefabs/GUI.tscn", "res://Scenes/OptionsMenu.tscn", "res://Prefabs/audio_player.tscn", "res://Prefabs/parallax_background.tscn")
-current_scene="res://Scenes/GameScene.tscn"
+current_scene="res://Prefabs/parallax_background.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
