--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/GameScene.tscn", "res://scenes/MainMenu.tscn", "res://prefabs/audio_player.tscn")
-current_scene="res://prefabs/audio_player.tscn"
+open_scenes=PackedStringArray("res://scenes/GameScene.tscn", "res://scenes/MainMenu.tscn")
+current_scene="res://scenes/GameScene.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
