--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,15 +19,15 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://audio/menu_music.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://resources/", "res://prefabs/", "res://audio/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/OptionsMenu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/GameScene.tscn", "res://scenes/MainMenu.tscn")
+open_scenes=PackedStringArray("res://scenes/GameScene.tscn", "res://scenes/MainMenu.tscn", "res://scenes/OptionsMenu.tscn")
 current_scene="res://scenes/GameScene.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
