--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,12 +27,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/GameScene.tscn", "res://scenes/MainMenu.tscn", "res://scenes/OptionsMenu.tscn")
+open_scenes=PackedStringArray("res://scenes/GameScene.tscn", "res://scenes/MainMenu.tscn", "res://scenes/OptionsMenu.tscn", "res://prefabs/Player.tscn", "res://prefabs/GUI.tscn", "res://prefabs/parallax_background.tscn", "res://prefabs/Crystals/CrystalYellow.tscn")
 current_scene="res://scenes/GameScene.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
