--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/OptionsMenu.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/Login.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/GameScene.tscn", "res://scenes/MainMenu.tscn", "res://scenes/OptionsMenu.tscn", "res://prefabs/Player.tscn", "res://prefabs/GUI.tscn", "res://prefabs/parallax_background.tscn", "res://prefabs/Crystals/CrystalYellow.tscn")
+open_scenes=PackedStringArray("res://scenes/GameScene.tscn", "res://scenes/MainMenu.tscn")
 current_scene="res://scenes/GameScene.tscn"
 center_split_offset=-259
 selected_default_debugger_tab_idx=0
